# spectral

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  MCP.md  README.md  ROADMAP.md  install.sh  mkdocs.yml  pyproject.toml  pyrightconfig.json
.claude/rules/: cli.md  extension.md
.github/workflows/: docs.yml  publish-pypi.yml  release.yml
_documentation/analyze/: README.md
_documentation/format/: README.md  authentication.md  endpoints.md  errors-and-operations.md  principles.md  structure.md
cli/: client.py  console.py  har.py  main.py
cli/analyze/: __init__.py  cmd.py  correlator.py  llm.py  pipeline.py  protocol.py  schemas.py  spec_builder.py  tools.py  utils.py  validator.py
cli/android/: adb.py  cmd.py  patch.py  proxy.py
cli/capture/: cmd.py  inspect.py  loader.py  models.py  proxy.py
cli/client/: __init__.py  cmd.py
cli/commands/: config.py
cli/completions/: spectral.bash  spectral.zsh
cli/formats/: api_spec.py  app_meta.py  capture_bundle.py  catalog.py  config.py  mcp_tool.py
cli/generate/: cmd.py  (+5 more)
demo/: add_chrome.py  demo.cast  generate_cast.py
documentation/: bundle-format.md  getting-started.md  index.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
tests/: conftest.py  test_android.py  test_capture_proxy.py  test_cli.py  test_client.py  test_correlator.py  test_formats.py  test_generators.py  test_graphql.py  test_har.py  test_helpers.py  test_llm_helper.py  test_llm_tools.py  test_loader.py  test_protocol.py  test_schemas.py  test_spec_builder.py  test_steps.py  test_validator.py
(+327 files in other folders)
