[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-discover"
version = "0.1.0"
description = "Automatically discover and document web application APIs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.2.1",
    "requests>=2.28",
    "mitmproxy>=11.0.2",
]

[project.scripts]
api-discover = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["cli*"]

[project.optional-dependencies]
android = [
    "mitmproxy>=10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
